--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
     <groupId>com.eoniantech.build</groupId>
     <artifactId>slf4j-bom</artifactId>
-    <version>1.7.25</version>
+    <version>1.7.26-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>SLF4J BOM</name>
     <description>Bill of materials for SLF4J.</description>
